codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_preserves_status_line.snap
---
source: tui/src/chatwidget/tests/side.rs
assertion_line: 288
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"›                                                                               "
"                                                                                "
"  gpt-5.5                             Side from main thread · Ctrl+C to return  "
