codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_shows_parent_status.snap
---
source: tui/src/chatwidget/tests/side.rs
assertion_line: 309
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"›                                                                               "
"                                                                                "
"  gpt-5.5 default… Side from main thread · main needs input · Ctrl+C to return  "
