codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1364
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"›                                                                               "
"                                                                                "
"  Fast on                                                                       "
